--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -558,7 +558,7 @@ display: inline!important;
 #news-feed-page .news-box {
   border: 1px solid #e7e7e7;
   border-radius: 3px;
-  height:207px;
+  height:auto;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.02);
   margin: 0 auto;
   max-width: 100%;
@@ -626,7 +626,8 @@ display: inline!important;
 }
 
 #news-feed-page .image-box {
-  max-width: 95%;
+  max-width: 150px;
+  height: auto;
 }
 
 #news-feed-page .read-more-link {
