--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -46,7 +46,7 @@ h4 {
 
 p {
   margin-top: 0;
-  color: #939896!important;
+  color: #595959;
   line-height: 28px;
 }
 
@@ -176,7 +176,7 @@ p {
 }
 
 .info-box {
-  color: rgb(160, 160, 160);
+  color: #595959;
   border: 1px solid #E7E7E7;
   border-radius: 3px;
   box-shadow: 0 2px 4px 0 rgba(0,0,0,0.02);
@@ -493,15 +493,11 @@ padding-right:5px;
 
   padding-top:30px;
 }
-#page-footer a {
-  color:#ffffff!important;
+.page-footer p {
+  color: #d8d8d8;
 }
 .page-footer .logo {
   margin-bottom: 1rem;
-}
-#page-footer a:hover {
-  color:#fff!important;
-  opacity: .5!important;
 }
 .page-footer {
   background-color: #374641;
@@ -517,6 +513,7 @@ padding-right:5px;
   color: white;
 }
 .page-footer .header {
+  color: #d8d8d8;
   font-size: 18px;
 }
 .page-footer .social_footer {
@@ -527,8 +524,7 @@ width:20px;
 }
 
 .page-footer .grey {
-  color: #ffffff;
-  opacity: .3;
+  color: #afafaf;
   font-size: 12px;
   line-height: 20px;
   padding-bottom: 0px;
@@ -580,8 +576,8 @@ display: inline!important;
   background: #ffffff;
 }
 #news-feed-page h3 {
-  color: #b0b0b0;
-  font-weight: 400;
+  color: #0e6f51;
+  font-weight: bold;
   margin-bottom:0px;
 }
 #news-feed-page .wrap:first-child {
@@ -628,7 +624,7 @@ display: inline!important;
 
 #news-feed-page .news-heading time {
   float: right;
-  color: #D8D8D8;
+  color: #7676767;
   /*font-family: 'Roboto';*/
   font-style: italic;
   /*font-weight: 300;*/
@@ -680,7 +676,7 @@ display: inline!important;
 
 #faq-page .chiafaq {
   color: #0E6F51;
-  font-weight: 400;
+  font-weight: bold;
 }
 #faq-page .faq-list {
 list-style-type: none;
@@ -731,7 +727,6 @@ list-style-type: none;
   font-weight: 700;
 }
 #markdown-container p {
-  color: #B0B5B3;
   padding-left:60px;
   border-bottom: 1px solid #E7E7E7;
   padding-bottom:30px;
