--- a/webroot/css/style.css
+++ b/webroot/css/style.css
@@ -544,6 +544,11 @@ height:20px;
 width:20px;
 }
 
+.social_footer a:hover,
+.social_footer a:focus {
+  text-decoration: none;
+}
+
 .page-footer .grey {
   color: #afafaf;
   font-size: 12px;
